<resources>
    <string name="app_name">SHM</string>
    <string name="text">Text</string>
    <string name="logo_text">SMH</string>
    <string name="logo_text_2">Smart Health Monitoring</string>
    <string name="logo_text_and">&amp;</string>
    <string name="logo_text_3">First Aid System</string>

    <string name="text_cnic">CNIC No.</string>
    <string name="text_cnic_hint">Enter CNIC No.</string>
    <string name="text_first_name">First Name</string>
    <string name="text_first_name_hint">Enter First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_last_name_hint">Enter Last Name</string>
    <string name="text_email">Email</string>
    <string name="text_email_hint">Enter Email</string>
    <string name="text_password">Password</string>
    <string name="text_password_hint">Enter Password</string>
    <string name="text_phone_no">Phone No.</string>
    <string name="text_user_type">User Type</string>
    <string name="text_phone_no_hint">Enter Phone No.</string>
    <string name="text_father_guardian_name">Father/Guardian Name</string>
    <string name="text_father_guardian_name_hint">Enter Father/Guardian Name</string>
    <string name="text_father_guardian_phone_no">Father/Guardian Phone No.</string>
    <string name="text_father_guardian_phone_no_hint">Enter Father/Guardian Phone No.</string>
    <string name="text_logout">Logout</string>
    <string name="text_patient_name">Patient Name</string>
    <string name="text_patient_email">Patient Email</string>
    <string name="text_patient_cnic">Patient CNIC</string>
    <string name="text_patient_phone">Patient Phone</string>
    <string name="text_name">Name</string>
    <string name="text_phone">Phone</string>
    <string name="text_patient_guardian_name">Guardian Name</string>
    <string name="text_patient_guardian_phone">Guardian Phone</string>
    <string name="text_colon">:</string>
    <string name="text_search_patient">Search Patient</string>
    <string name="text_add_patient_report">Add Patient Report</string>
    <string name="text_enter_patient_cnic_no">Enter Patient CNIC No.</string>
    <string name="text_reason_for_accident">Reason For Accident</string>
    <string name="text_date">Date:</string>
    <string name="text_treated_by">Treated By</string>
    <string name="text_reason_for_accident_hint">Enter reason for accident</string>
    <string name="text_kind_of_injury">Kind of Injury</string>
    <string name="text_ind_of_injury_hint">Enter kind of injury</string>
    <string name="text_treatment">Treatment</string>
    <string name="text_treatment_hint">Enter treatment detail</string>
    <string name="text_patients_treated">Treated Patients</string>
    <string name="text_patient_treatment_history">Patient Treatment History</string>
    <string name="text_add_treatment">Add Treatment</string>
    <string name="text_notify_parents">Notify Parents</string>
    <string name="text_live_demo">Live Demo</string>
    <string name="text_reports">Reports</string>
    <string name="text_sign_up"><u>Sign Up</u></string>
    <string name="text_reports_test_name">Test Name</string>
    <string name="text_reports_test_name_hint">Enter Test Name</string>
    <string name="text_reports_test_file">Test File</string>
    <string name="text_add">ADD</string>
    <string name="text_hr">HR</string>
    <string name="text_hum">HUM</string>
    <string name="text_oxi">OXI</string>
    <string name="text_temp">TEMP</string>

    <string name="title_login">Sign In</string>
    <string name="login_text_2">Don\'t have account.</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_patient_dashboard">Patient Dashboard</string>
    <string name="title_patient_trainee">First Aid Person Dashboard</string>
    <string name="title_doctor_dashboard">Doctor Dashboard</string>
    <string name="title_add_patient">Add Patient Treatment</string>
    <string name="title_treatment_patient_detail">Patient Treatment Detail</string>
    <string name="title_patient_reports">Patient Reports</string>
    <string name="title_patient_reports_add">Add Patient Report</string>
    <string name="title_live_demo">Patient Live Demo</string>
    <string name="lbl_contact_no_parents">Guardian Phone No.</string>
    <string name="text_enter_message">Enter Message</string>
    <string name="text_pos">POS</string>
    <string name="text_type_of_disease">Type of Disease</string>
    <string name="text_enter_type_of_disease">Enter Type of Disease</string>
</resources>
