<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/splash_background"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/logo_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_40"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_thirty"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logo_text_2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_16" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logo_text_and"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_16" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logo_text_3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_16" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/margin_twenty">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cnic"
                        android:textColor="@color/text_1_color"
                        android:textSize="@dimen/size_18"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etCNICNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_cnic_hint"
                        android:inputType="numberSigned"
                        android:textColor="@color/text_1_color"
                        android:textColorHint="@color/text_2_color" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_email"
                        android:textColor="@color/text_1_color"
                        android:textSize="@dimen/size_18"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_email_hint"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/text_1_color"
                        android:textColorHint="@color/text_2_color" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_ten"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_password"
                        android:textColor="@color/text_1_color"
                        android:textSize="@dimen/size_18"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_ten"
                        android:hint="@string/text_password_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/text_1_color"
                        android:textColorHint="@color/text_2_color" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_50"
                    android:layout_marginTop="@dimen/margin_thirty"
                    android:background="@color/color_blue"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_20"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_twenty"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_text_2"
                        android:textColor="@color/text_1_color"
                        android:textSize="@dimen/size_14" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_ten"
                        android:background="?selectableItemBackground"
                        android:padding="@dimen/margin_ten"
                        android:text="@string/text_sign_up"
                        android:textColor="@color/color_blue"
                        android:textSize="@dimen/size_16"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>