<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_twenty"
    tools:ignore="SpUsage">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_contact_no_parents"
        android:textColor="@color/text_1_color"
        android:textSize="@dimen/size_16"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvParentContactNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_ten"
        android:text="@string/text"
        android:textColor="@color/text_1_color"
        android:textSize="@dimen/size_16" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_ten"
        android:background="@drawable/background_edit_text_dialog">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMessageToSend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/text_enter_message"
            android:inputType="textMultiLine"
            android:padding="@dimen/margin_ten"
            android:paddingTop="@dimen/margin_ten"
            android:textColor="@color/text_1_color"
            android:textColorHint="@color/text_2_color" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>